<resources>
    <string name="app_name">ToDo</string>

    <string name="task_title_txt">Title:</string>
    <string name="task_desc_txt">Description:</string>
    <string name="task_date_txt">Entry date:</string>
    <string name="task_webPg_txt">Web Page:</string>
    <string name="task_loc_txt">Location:</string>
    <string name="task_lat_txt">Latitude:</string>
    <string name="task_lon_txt">Longitude:</string>
    <string name="task_urgentCB_txt">Urgent</string>
    <string name="task_imageS_txt">Image Source:</string>
    <string name="task_title_hint">(E.g. Walk Dog)</string>
    <string name="task_desc_hint">(E.g. Take Scooby-Doo to the park)</string>
    <string name="task_date_hint">DD/MM/YY</string>
    <string name="task_webPg_hint">(E.g. www.google.com)</string>
    <string name="task_lat_hint">(E.g. 41.38648)</string>
    <string name="task_lon_hint">(E.g. 2.184637)</string>
    <string name="task_imageS_hint">(E.g. www.google.com)</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_new_task">New Task</string>
    <string name="action_insert_dummy_data">Insert Dummy Task</string>
    <string name="action_delete_all_entries">Delete All Tasks</string>
    <string name="task_added_txt">Task  \"REPLACEMENT\" added</string>
    <string name="dummy_task_added_txt">Dummy Task added</string>
    <string name="deleted_tasks_txt">All Tasks deleted</string>
    <string name="deleted_task_txt">Task \"REPLACEMENT\" deleted successfully</string>
    <string name="empty_tasks_list_txt">No tasks found</string>
    <string name="empty_view_txt">No Tasks found\nInsert a new task by clicking the options menu.</string>
    <string name="dummy_task_title_txt">Bathe Scooby-Doo</string>
    <string name="dummy_task_description_txt">No time for mistery now, is bathing time, because on Halloween night, the New England town of Salem was being haunted by the witch of Milissa Wilcox, who was burned at the stake in 1778. After receiving a distressed call from their friend Arlene Wilcox, a descendant of the accused witch, the gang arrived to help, despite being warned off by the town\'s mayor. The witch, it seems, looked exactly like Arlene. Soon after the gang\'s arrival, the townsfolk held a meeting and decided to take Arlene into custody and make her confess that she has been possessed by the witch. As Shaggy and Scooby prepared for Halloween, they encountered the witch.</string>
    <string name="dummy_task_date_txt">09/11/2017</string>
    <string name="dummy_task_webPage_txt">https://www.cesarsway.com/dog-care/grooming/how-to-bathe-your-dog</string>
    <string name="dummy_task_lat_txt">41.39028201209704</string>
    <string name="dummy_task_lon_txt">2.1881286799907684</string>
    <string name="dummy_task_isDone_txt">false</string>
    <string name="dummy_task_isUrgent_txt">true</string>
    <string name="dummy_task_imageS_txt">https://vignette.wikia.nocookie.net/scoobydoo/images/5/5a/Bathtub.png/revision/latest?cb=20150404165750</string>
    <string name="delete_all_dialog_message">Delete all tasks?</string>
    <string name="delete_one_dialog_message">Delete current task?</string>
    <string name="delete_dialog_button_cancel">Cancel</string>
    <string name="confirmation_dialog_title">Confirmation</string>
    <string name="mark_done_dialog">Mark this task done?</string>
    <string name="task_marked_done">Task successfully marked done</string>
    <string name="task_is_done">The Task \"REPLACEMENT\" is already marked as done</string>
    <string name="empty_fields">No fields can be empty</string>
    <string name="editorActivity_title">Create New Task</string>
    <string name="detailsActivity_title">Task Details</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="location_not_avaible">Auto-Location not available</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDbaGACHqV9PVbqQOf8Hcl47kWLxppp6QA</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in/Log in</string>
    <string name="email_tv_txt">User (Email):</string>
    <string name="password_tv_txt">Password:</string>
    <string name="emailLI_hint">Insert your email</string>
    <string name="password_LI_hint">Insert password</string>
    <string name="login_button_txt">log in</string>
    <string name="short_password">Password must contain al least 6 characters</string>

</resources>
