<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/main_margin_size"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_margin_size"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/task_title_txt"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/taskTitleET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/task_title_hint"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen8"
            android:text="@string/task_desc_txt"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/taskDescET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_margin_size"
            android:hint="@string/task_desc_hint"
            android:textColor="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_margin_size"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/task_webPg_txt"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/taskWebPgET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/task_webPg_hint"
                android:inputType="textWebEditText"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_margin_size"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/task_imageS_txt"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/taskImageSET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/task_imageS_hint"
                android:inputType="textWebEditText"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_margin_size"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/task_date_txt"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/taskDateET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/main_margin_size"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/task_date_hint"
                android:inputType="date"
                android:maxLength="10"
                android:textColor="@color/colorBlack" />

            <ImageButton
                android:id="@+id/dateB"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_button"
                android:src="@drawable/ic_today" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_margin_size"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen4"
                    android:text="@string/task_loc_txt"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/locNotAvailableTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/location_not_avaible"
                    android:textColor="@color/colorRed"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/main_margin_size"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen8"
                        android:text="@string/task_lat_txt"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/taskLatET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/task_lat_hint"
                        android:inputType="numberDecimal"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen8"
                        android:layout_weight="2"
                        android:text="@string/task_lon_txt"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/taskLonET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/task_lon_hint"
                        android:inputType="numberDecimal"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

            </LinearLayout>

            <ImageButton
                android:id="@+id/locationB"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:src="@drawable/ic_location_searching" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/isUrgentCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Urgent"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>

</merge>