<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.administrador.taskstodo.LoginActivity">

    <LinearLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dimen40"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dimen8"
            android:text="@string/email_tv_txt"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_dimen20"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailLI_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen8"
            android:gravity="center"
            android:hint="@string/emailLI_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dimen8"
            android:text="@string/password_tv_txt"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_dimen20"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_LIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_margin_size"
            android:gravity="center"
            android:hint="@string/password_LI_hint"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/loginB"
            android:layout_width="@dimen/button_double_size"
            android:layout_height="@dimen/button_size"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/login_button_txt"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_dimen20"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
