<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrador.taskstodo.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/taskImageIV"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image" />

        <TextView
            android:id="@+id/taskTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/task_title_txt"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/taskDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:text="@string/task_date_hint"
                android:textColor="@color/colorRed"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/isUrgentCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_urgentCB_txt"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/taskDescTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/task_desc_txt"
            android:textColor="@color/colorBlack" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_imageS_txt"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/taskImageSTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="3"
            android:text="@string/task_imageS_txt"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_webPg_txt"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/taskWebPgTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/task_webPg_txt"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorBlack" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_loc_txt"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/taskLocTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/task_loc_txt"
                android:textColor="@color/colorBlack" />

            <ImageButton
                android:id="@+id/openMapB"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="right"
                android:background="@drawable/rounded_button"
                android:src="@drawable/ic_map" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>